<resources>
    <string name="app_name">MyPlaces</string>
    <string name="add_place">Add place</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="all_places">All places</string>
    <string name="information">Information</string>
    <string name="information_content">"Приложение предназначено для путешествующих по России.\n"
                    "\n"
                    "Нужно сделать так, чтобы пользователь мог кликать на карте, а в месте клика создавать маркер с описанием (например, \"Нулевая верста\" и т.д.).\n"
                    "\n"
                    "Все точки должны храниться на устройстве, чтобы потом человек мог приехать в город и быстро по карте соориентироваться, какие достопримечательности он хотел посмотреть. \n"
                    "\n"
                    "Приложение должно поддерживать:\n"
                    "1. Создание точки\n"
                    "2. Редактирование точки\n"
                    "3. Удаление точки\n"
                    "4. Просмотр всех точек (на отдельном экране - пользователь кликает в существующую точку и переходит к ней на карте)"</string>
    <string name="save">Save</string>
    <string name="name">Title</string>
    <string name="description">Description</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_open">"Show "</string>
    <string name="error_empty_name">Name can\'t be empty!</string>
</resources>