<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/all"
                android:icon="@drawable/ic_all_24dp"
                android:title="@string/all_places" />
            <item
                android:id="@+id/favorites"
                android:icon="@drawable/ic_favorite_24dp"
                android:title="@string/favorites" />
            <item
                android:id="@+id/recent"
                android:icon="@drawable/ic_recent_24dp"
                android:title="@string/recent" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/info"
                android:icon="@drawable/ic_info_24dp"
                android:title="@string/information" />
        </menu>
    </item>
</menu>